2.5.20 --> 2.5.21hg
===================

Incompatible changes:

- PDB.PDBConfiguration stores atom positions and temperature factors
  (isotropic and anisotropic) in internal units (nm, nm**2) rather than
  in PDB units (Ang, Ang**2).

  Scripts that access these parameters directly must be updated!


2.5.19 --> 2.5.20
=================

New features:

- ParallelepipedicPeriodicUniverse makes it possible to work with
  non-orthogonal universes that are periodic in three dimensions.
  At the moment, energy evaluation is slow (the nonbonded list
  iterates over all atom pairs), and the reciprocal part of the Ewald
  sum is not yet implemented.

- When the method view() is called on a universe object that represents a
  periodic universe, the simulation box is shown as twelve lines
  representing its edges, if VMD has been defined as PDBVIEWER.

- New force field for C-alpha models of proteins: AnisotropicNetworkForceField.
  This is very similar to DeformationForceField, the only difference being
  that the pair force constant as a function of the pair distance is a step
  function rather than an exponential.

Modifications:

- The method Universe.configuration() no longer folds the atomic coordinates
  into the central box of a periodic universe. Sometimes this is not desired,
  and when it it, it can always be achieved with an explicit call to
  Universe.foldCoordinatesIntoBox().

Improvements:

- The methods that perform calculations on normal modes now all take
  an optional argument first_mode (default: 6) that defines the first
  mode to be taken into account.

- Database entries for C- and N-terminal neutral lysine.

- More unt tests.

Bug fixes:

- When Configuration objects were copied, the cell parameters were not copied.
  The copy contained the cell parameters of the current configuration of the
  universe instead.

- Nonbonded list generation for periodic universes could in rare cases
  miss atom pairs inside the cutoff.
